# ginkgo

./: .gitignore  CMakeLists.txt
common/matrix/: dense_kernels.cpp
cuda/base/: kernel_launch_reduction.cuh
cuda/matrix/: dense_kernels.cu
cuda/test/base/: kernel_launch.cu
dpcpp/: CMakeLists.txt
dpcpp/base/: kernel_launch.dp.hpp  kernel_launch_solver.dp.hpp
dpcpp/matrix/: dense_kernels.dp.cpp
dpcpp/solver/: idr_kernels.dp.cpp
dpcpp/test/base/: kernel_launch.dp.cpp
examples/: CMakeLists.txt
examples/fem-reaction-diffusion-equation/: CMakeLists.txt  build.sh  fem-reaction-diffusion-equation-explicit.cpp  fem-reaction-diffusion-equation-orig.cpp  fem-reaction-diffusion-equation.cpp  fem-reaction-diffusion-equation_orig.cpp  helper.hpp  kernels.cpp  mesh.cpp  mesh.hpp
examples/fem-reaction-diffusion-equation-plain-cuda/: CMakeLists.txt  fem-reaction-diffusion-equation-plain.cpp  helper.hpp  mesh.cpp  mesh.hpp
examples/fem-reaction-diffusion-equation/doc/: builds-on  intro.dox  results.dox  short-intro  tooltip
hip/base/: kernel_launch_reduction.hip.hpp
hip/matrix/: dense_kernels.hip.cpp
